--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -1,9 +1,9 @@
 body {
     font-family: "Arial", "Meiryo", sans-serif;
+    text-align: center;
 }
 html {
     font-size: 20px;
-    text-align: center;
 }
 .blue {
     color: skyblue;
@@ -15,7 +15,7 @@ h1 {
     font-family: "Josefin Sans", sans-serif;
     font-size: 2em;
     letter-spacing: 1.2em;
-    text-shadow: 2px 2px,4px red;
+    text-shadow: 1px 1px,2px gray;
     border-bottom: solid 3px rgb(115, 115, 114);
 }
 #basic p {
