--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -15,7 +15,7 @@ h1 {
     font-family: "Josefin Sans", sans-serif;
     font-size: 2em;
     letter-spacing: 1.2em;
-    text-shadow: 1px 1px,2px gray;
+    text-shadow: 3px 3px 2px gray;
     border-bottom: solid 3px rgb(115, 115, 114);
 }
 #basic p {
